// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyDropdown should render MyDropdown: click 1`] = `
Array [
  <div
    className="editor-format-toolbar block-editor-format-toolbar"
  >
    <div
      className="components-toolbar"
    >
      <div
        className="components-dropdown components-dropdown-menu components-dropdown-button"
      >
        <button
          aria-expanded={true}
          aria-haspopup="true"
          aria-label="dropdown"
          className="components-button components-dropdown-menu__toggle is-opened has-icon"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <span
            className="dashicon dashicons dashicons-admin-customizer"
          />
        </button>
        <div
          onKeyDown={[Function]}
          tabIndex="-1"
        >
          <div
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="components-popover components-dropdown__content components-dropdown-menu__popover is-without-arrow"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
              >
                <div
                  className="components-popover__content"
                  tabIndex="-1"
                >
                  <div
                    style={
                      Object {
                        "position": "relative",
                      }
                    }
                  >
                    <iframe
                      aria-hidden={true}
                      frameBorder={0}
                      src="about:blank"
                      style={
                        Object {
                          "display": "block",
                          "height": "100%",
                          "left": 0,
                          "opacity": 0,
                          "overflow": "hidden",
                          "pointerEvents": "none",
                          "position": "absolute",
                          "top": 0,
                          "width": "100%",
                          "zIndex": -1,
                        }
                      }
                      tabIndex={-1}
                    />
                    <div
                      aria-label="dropdown"
                      aria-orientation="vertical"
                      className="components-dropdown-menu__menu"
                      role="menu"
                    >
                      <button
                        className="components-button components-dropdown-menu__menu-item is-active has-text has-icon"
                        onClick={[Function]}
                        role="menuitem"
                        type="button"
                      >
                        <span
                          className="dashicon dashicons dashicons-admin-customizer"
                        />
                        <div
                          className="test1"
                        >
                          test1
                        </div>
                      </button>
                      <button
                        className="components-button components-dropdown-menu__menu-item has-text has-icon"
                        onClick={[Function]}
                        role="menuitem"
                        type="button"
                      >
                        <span
                          className="dashicon dashicons dashicons-admin-customizer"
                        />
                        <div
                          className="test2"
                        >
                          test2
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  Array [
    <div
      onMouseMove={[Function]}
    >
      <div
        className="block-editor-block-list__layout is-root-container"
        onDragStart={[Function]}
        onFocus={[Function]}
      >
        Array [
          "",
          <div
            className="block-list-appender wp-block"
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="wp-block block-editor-default-block-appender"
              data-root-client-id=""
            >
              <textarea
                aria-label="Add block"
                className="block-editor-default-block-appender__content"
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                role="button"
                rows={1}
                value="Start writing or type / to choose a block"
              />
              <div
                className="components-dropdown block-editor-inserter"
              >
                <button
                  aria-expanded={false}
                  aria-haspopup="true"
                  aria-label="Add block"
                  className="components-button block-editor-inserter__toggle has-icon"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>,
        ]
      </div>
    </div>,
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ],
]
`;

exports[`MyDropdown should render MyDropdown: render 1`] = `
Array [
  <div
    className="editor-format-toolbar block-editor-format-toolbar"
  >
    <div
      className="components-toolbar"
    >
      <div
        className="components-dropdown components-dropdown-menu components-dropdown-button"
      >
        <button
          aria-expanded={false}
          aria-haspopup="true"
          aria-label="dropdown"
          className="components-button components-dropdown-menu__toggle has-icon"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <span
            className="dashicon dashicons dashicons-admin-customizer"
          />
        </button>
      </div>
    </div>
  </div>,
  Array [
    <div
      onMouseMove={[Function]}
    >
      <div
        className="block-editor-block-list__layout is-root-container"
        onDragStart={[Function]}
        onFocus={[Function]}
      >
        Array [
          "",
          <div
            className="block-list-appender wp-block"
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="wp-block block-editor-default-block-appender"
              data-root-client-id=""
            >
              <textarea
                aria-label="Add block"
                className="block-editor-default-block-appender__content"
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                role="button"
                rows={1}
                value="Start writing or type / to choose a block"
              />
              <div
                className="components-dropdown block-editor-inserter"
              >
                <button
                  aria-expanded={false}
                  aria-haspopup="true"
                  aria-label="Add block"
                  className="components-button block-editor-inserter__toggle has-icon"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>,
        ]
      </div>
    </div>,
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ],
]
`;
